--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="Dra. Erica Castro" />
-    <meta name="description" content="neurologista, neurocirurgiao, erica castro, dra erica castro, Montes Claros, neurologista em Montes Claros, eletroneuromiografia, eletroneuromiografia em montes claros,
-    doenças neuromusculares, doenças geneticas">
+    <meta name="description" content="nefrologia, nefrologista, maria cecilia prates, dra maria cecilia prates, Montes Claros, Diamantina, nefrologista em Montes Claros, nefrologista em Diamantina, tratamento de rins, tratamento de rins em montes claros,
+    pedra nos rins, hipertensao arterial, infecção urinária, nefrites, litíase renal, doenças raras císticas, transplante renal, hemodiálise, hemodiálise em Diamantina, doença renal cronica.">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
-    <title>Dra. Érica Castro | Neurologista e Eletroneuromiografia em Montes Claros</title>
+    <title>Dra. Maria Cecilia Prates | Nefrologista em Diamantina</title>
     <!-- Stylesheets & Fonts -->
     <link href="css/plugins.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -52,7 +52,7 @@
             <div class="header-inner">
                 <div class="container">
                     <!--Logo-->
-                    <div id="logo"> <a href="https://draericagcastro.com.br"><img class="logo-default" src="images/logo.png" alt=""> <img class="logo-dark" src="images/logo-branco.png" alt=""></a> </div>
+                    <div id="logo"> <a href="https://dramariaceciliaprates.com.br/"><img class="logo-default" src="images/logo-icon.png" alt=""> <img class="logo-dark" src="images/logo-branco.png" alt=""></a> </div>
                     <!--End: Logo-->
                     <!--Navigation Resposnive Trigger-->
                     <div id="mainMenu-trigger"> <a class="lines-button x"><span class="lines"></span></a> </div>
@@ -86,11 +86,11 @@
                     <div class="slide-captions">
                         <!-- Captions -->
                         <div>
-                            <h4 class="text-uppercase m-b-0 texto-banner-margem">Dra. ÉRICA GUIMARÃES CASTRO</h4>
-                            <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Neurologista e Neurofisiologista</h1></div>
+                            <h4 class="text-uppercase m-b-0 texto-banner-margem">Dra. MARIA CECÍLIA SALES M. PRATES</h4>
+                            <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Nefrologista em Diamantina e região</h1></div>
                             <br />
                             <br>
-                            <a class="btn btn-primary btn-top" style="background-color: #af665b !important; border-color: #af665b;" href="#sobre-mim">CONHEÇA A DRA. ÉRICA</a>
+                            <a class="btn btn-primary btn-top" style="background-color: #af665b !important; border-color: #af665b;" href="#sobre-mim">CONHEÇA A DRA. MARIA CECILIA PRATES</a>
                         <a class="btn btn-dark btn-top" href="https://api.whatsapp.com/send?phone=553830148664">AGENDE SUA CONSULTA <i class="fab fa-whatsapp"></i></a>
                         <!-- end: Captions -->
                     </div>
@@ -107,7 +107,7 @@
                             <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Atendimento médico quando e onde você estiver</h1></div>
                             <br />
                             <br>
-                            <a class="btn btn-primary btn-top" style="background-color: #af665b !important; border-color: #af665b;" href="#sobre-mim">CONHEÇA A DRA. ÉRICA</a>
+                            <a class="btn btn-primary btn-top" style="background-color: #af665b !important; border-color: #af665b;" href="#sobre-mim">CONHEÇA A DRA. MARIA CECILIA PRATES</a>
                         <a class="btn btn-dark btn-top" href="https://api.whatsapp.com/send?phone=553830148664">AGENDE SUA CONSULTA <i class="fab fa-whatsapp"></i></a>
                         <!-- end: Captions -->
                     </div>
@@ -124,7 +124,7 @@
                             <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Agende sua consulta em qualquer horário do dia.</h1></div>
                             <br />
                             <br>
-                            <a class="btn btn-primary btn-top" style="background-color: #af665b !important; border-color: #af665b;" href="#sobre-mim">CONHEÇA A DRA. ÉRICA</a>
+                            <a class="btn btn-primary btn-top" style="background-color: #af665b !important; border-color: #af665b;" href="#sobre-mim">CONHEÇA A DRA. MARIA CECILIA PRATES</a>
                         <a class="btn btn-dark btn-top" href="https://api.whatsapp.com/send?phone=553830148664">AGENDE SUA CONSULTA <i class="fab fa-whatsapp"></i></a>
                         <!-- end: Captions -->
                     </div>
