--- a/termos-e-condicoes.html
+++ b/termos-e-condicoes.html
@@ -4,13 +4,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="DRA Erica Castro" />
-    <meta name="description" content="neurologista, neurocirurgiao, erica castro, dra erica castro, Montes Claros, neurologista em Montes Claros, eletroneuromiografia,
-    doenças neuromusculares, doenças geneticas">
+    <meta name="author" content="Dra. Erica Castro" />
+    <meta name="description" content="nefrologia, nefrologista, maria cecilia prates, dra maria cecilia prates, Montes Claros, Diamantina, nefrologista em Montes Claros, nefrologista em Diamantina, tratamento de rins, tratamento de rins em montes claros,
+    pedra nos rins, hipertensao arterial, infecção urinária, nefrites, litíase renal, doenças raras císticas, transplante renal, hemodiálise, hemodiálise em Diamantina, doença renal cronica.">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
-    <title>Termos e Condições - DRA Érica Castro | Neurologista e Eletroneuromiografia em Montes Claros</title>
+    <title>Termos e Condições - Dra. Maria Cecilia Prates | Nefrologista em Diamantina</title>
     <!-- Stylesheets & Fonts -->
     <link href="css/plugins.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
