--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="Dra. Erica Castro" />
+    <meta name="author" content="Dra. Maria Cecília Sales M. Prates" />
     <meta name="description" content="nefrologia, nefrologista, maria cecilia prates, dra maria cecilia prates, Montes Claros, Diamantina, nefrologista em Montes Claros, nefrologista em Diamantina, tratamento de rins, tratamento de rins em montes claros,
     pedra nos rins, hipertensao arterial, infecção urinária, nefrites, litíase renal, doenças raras císticas, transplante renal, hemodiálise, hemodiálise em Diamantina, doença renal cronica.">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -29,16 +29,16 @@
                 <div class="row">
                     <div class="col-md-6">
                         <ul class="top-menu">
-                            <li><a href="tel:3830148664">(38) 3014-8664</a></li>
-                            <li><a href="mailto:ericagcastro@yahoo.com.br">Email: ericagcastro@yahoo.com.br</a></li>
+                            <li><a href="tel:3830148664">(38) 9 9973-1321</a></li>
+                            <li><a href="mailto:doutoramariacecilia@gmail.com">Email: doutoramariacecilia@gmail.com</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 d-none d-sm-block">
                         <div class="social-icons social-icons-colored-hover">
                             <ul>
-                                <li class="social-icons"><a href="https://api.whatsapp.com/send?phone=553830148664"><i class="fab fa-whatsapp"></i></a></li>
-                                <li class="social-instagram"><a href="https://www.instagram.com/ericagcastro.neuro/"><i class="fab fa-instagram"></i></a></li>
-                                <li class="social-linkedin"><a href="https://www.linkedin.com/in/%C3%A9rica-guimar%C3%A3es-castro-80960619a/"><i class="fab fa-linkedin"></i></a></li>
+                                <li class="social-icons"><a href="https://api.whatsapp.com/send?phone=5538999731321"><i class="fab fa-whatsapp"></i></a></li>
+                                <li class="social-instagram"><a href="https://www.instagram.com/dra.mariacecilianefro/"><i class="fab fa-instagram"></i></a></li>
+                                <li class="social-facebook"><a href="https://www.facebook.com/mariacecilia.prates.14/"><i class="fab fa-facebook"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
             <div class="header-inner">
                 <div class="container">
                     <!--Logo-->
-                    <div id="logo"> <a href="https://draericagcastro.com.br"><img class="logo-default" src="images/logo.png" alt=""> <img class="logo-dark" src="images/logo-branco.png" alt=""></a> </div>
+                    <div id="logo"> <a href="https://dramariaceciliaprates.com.br/"><img class="logo-default" src="images/logo-icon.png" alt=""> <img class="logo-dark" src="images/logo-branco.png" alt=""></a> </div>
                     <!--End: Logo-->
                     <!--Navigation Resposnive Trigger-->
                     <div id="mainMenu-trigger"> <a class="lines-button x"><span class="lines"></span></a> </div>
@@ -62,12 +62,12 @@
                         <div class="container">
                             <nav>
                                 <ul>
-                                    <li><a href="https://draericagcastro.com.br">INÍCIO</a></li>
-                                    <li class="dropdown"><a href="https://draericagcastro.com.br/#sobre-mim">Sobre Mim</a></li>                                        
-                                    <li class="dropdown"><a href="https://draericagcastro.com.br#area-de-atuacao">Áreas de Atuação</a></li>
+                                    <li><a href="https://dramariaceciliaprates.com.br">INÍCIO</a></li>
+                                    <li class="dropdown"><a href="#sobre-mim">Sobre Mim</a></li>                                        
+                                    <li class="dropdown"><a href="#area-de-atuacao">Áreas de Atuação</a></li>
                                     <li class="dropdown"><a href="eletroneuromiografia.html">Eletroneuromiografia</a></li>
-                                    <li class="dropdown mega-menu-item"><a href="https://draericagcastro.com.br/#onde-atendo">Onde Atendo</a></li>
-                                    <a href="https://api.whatsapp.com/send?phone=553830148664"><button type="button" class="btn btn-dark btn-icon-holder btn-light-hover" style="background-color:#000000; border: none;">Agende sua Consulta<i class="fab fa-whatsapp"></i></button></a>
+                                    <li class="dropdown mega-menu-item"><a href="#onde-atendo">Onde Atendo</a></li>
+                                    <a href="https://api.whatsapp.com/send?phone=5538999731321"><button type="button" class="btn btn-dark btn-icon-holder btn-light-hover" style="background-color:#000000; border: none;">Agende sua Consulta<i class="fab fa-whatsapp"></i></button></a>
                                 </ul>
                             </nav>
                         </div>
@@ -95,11 +95,11 @@
         <section>
             <div class="container">
                 <div>
-                    <h3>Dra. Érica Guimarães Castro</h3>
-                    <span>ÚLTIMA ATUALIZAÇÃO: 14 DE ABRIL DE 2023</span>
+                    <h3>Dra. Maria Cecília Sales M. Prates</h3>
+                    <span>ÚLTIMA ATUALIZAÇÃO: 08 DE MAIO DE 2023</span>
                     <br>
                     <br>
-                    <p>Esta política de privacidade (“Política”) descreve como Dra. Érica Guimarães Castro ('Empresa', 'nós' e 'nosso') procede, recolhe, usa e partilha informação pessoal quando usa este website https://draericaguimaraescastro.com.br (O “Site”). Por favor leia a informação abaixo cuidadosamente para que possa entender as nossas praticas relativamente como lidamos com a sua informação pessoal e como tratamos essa informação.
+                    <p>Esta política de privacidade (“Política”) descreve como Dra. Maria Cecília Sales M. Prates ('Empresa', 'nós' e 'nosso') procede, recolhe, usa e partilha informação pessoal quando usa este website https://dramariaceciliaprates.com.br (O “Site”). Por favor leia a informação abaixo cuidadosamente para que possa entender as nossas praticas relativamente como lidamos com a sua informação pessoal e como tratamos essa informação.
                         <p><Strong>1. FINALIDADE DO PROCESSAMENTO</Strong><br>
                             O que são dados pessoais?<br><br>
                             Nós recolhemos informação sobre si de várias formas, incluíndo dados pessoais. Como descrito nesta Política “dados pessoais” conforme é definido no regulamento geral de proteção de dados, incluí qualquer informação, que combinada com mais dados, ou não que recolhemos sobre você identifica você como um indivíduo, incluíndo por exemplo o seu nome, código postal, email e telefone.
@@ -209,24 +209,24 @@ Se você quiser exercer qualquer um deste direitos por favor contacte-nos. Por f
                             <br>
                             <p>
                                 <strong>14. QUEIXAS</strong><br>
-                                Nós estamos empenhados em resolver qualquer queixa sobre a forma como recolhemos os seus dados pessoais. Se tiver alguma queixa que queira fazer sobre a nossa política de privacidade, ou as nossas praticas relacionadas com os seus dados pessoais, por favor contacte-nos em: ericagcastro@yahoo.com.br. Nós iremos responder ao seu contacto o mais rápido possível, no máximo de 30 dias. Nós esperamos resolver qualquer situação que seja trazida até nós por você, em todo o caso se verificarmos que a sua queixa não é aplicável, você está no seu direito de contactar a autoridade local de protecção de dados.
+                                Nós estamos empenhados em resolver qualquer queixa sobre a forma como recolhemos os seus dados pessoais. Se tiver alguma queixa que queira fazer sobre a nossa política de privacidade, ou as nossas praticas relacionadas com os seus dados pessoais, por favor contacte-nos em: doutoramariacecilia@gmail.com. Nós iremos responder ao seu contacto o mais rápido possível, no máximo de 30 dias. Nós esperamos resolver qualquer situação que seja trazida até nós por você, em todo o caso se verificarmos que a sua queixa não é aplicável, você está no seu direito de contactar a autoridade local de protecção de dados.
                             </p>
                             <br>
                             <p>
                                 <strong>15. INFORMAÇÃO DE CONTATO</strong><br>
-                                Nós agradecemos os seus comentários e questões que tenha sobre a nossa política de privacidade. Poderá contactar-nos por e-mail em ericagcastro@yahoo.com.br.
+                                Nós agradecemos os seus comentários e questões que tenha sobre a nossa política de privacidade. Poderá contactar-nos por e-mail em doutoramariacecilia@gmail.com.
                             </p>
                         </div>
                     </section>
 
         <!-- Footer -->
-        <footer id="footer">
+        <footer id="footer" style="background-color: rgba(197,150,150, .2);">
             <div class="footer-content">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="widget">
-                                <a href="https://draericagcastro.com.br"><img class="" src="./images/footer-bg.png" alt="" style="width: 80%;"></img></a>
+                                <a href="https://dramariaceciliaprates.com.br"><img class="" src="./images/footer-bg.png" alt="" style="width: 80%;"></img></a>
                             </div>
                         </div>
                         <div class="col-lg-7">
@@ -235,10 +235,10 @@ Se você quiser exercer qualquer um deste direitos por favor contacte-nos. Por f
                                 <div class="col-lg-6">
                                     <div class="widget">
                                         <div class="widget-title">Responsável Técnico</div>
-                                        <p>Dra. Érica Guimarães Castro<br>
-                                            CRM MG 71590<br>
-                                            RQE Neurologista: 47504<br>
-                                            RQE Neurofisiologista: 55971    
+                                        <p>Dra. Maria Cecília Sales M. Prates<br>
+                                            CRM MG 55227<br>
+                                            RQE Clínica: 38500<br>
+                                            RQE Nefrologia: 38501    
                                         </p>
                                     </div>
                                 </div>
@@ -246,15 +246,15 @@ Se você quiser exercer qualquer um deste direitos por favor contacte-nos. Por f
                                 <div class="col-lg-6">
                                     <div class="widget">
                                         <div class="widget-title">Contato</div>
-                                        <a href=""><p>(38) 9 9253-5149</p></a>
-                                        <p>Av. Cel Prates, 376, Sala 505, Centro - Montes Claros/MG</p>
+                                        <a href="tel:38999731321"><p>(38) 9 9973-1321</p></a>
+                                        <p>Rua do Fogo, 400, Centro - Diamantina-MG <span style=" font-size: 12px;">(ao lado da igreja Santa Luz)</span></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="widget">
                                         <div class="widget-title">Links</div>
                                         <ul class="list">
-                                            <li><a href="termos-e-condicoes">Termos e Condições</a></li>
+                                            <li><a href="termos-e-condicoes.html">Termos e Condições</a></li>
                                             <li><a href="politica-de-privacidade.html">Política de Privacidade</a></li>
                                         </ul>
                                     </div>
@@ -276,7 +276,7 @@ Se você quiser exercer qualquer um deste direitos por favor contacte-nos. Por f
             </div>
             <div class="copyright-content">
                 <div class="container">
-                    <div class="copyright-text text-center">&copy; 2023 Dra. Érica Guimarães Castro, Neurologista e Neurofisiologista em Montes Claros. Todos os direitos reservados.</div>
+                    <div class="copyright-text text-center">&copy; 2023 Dra. Maria Cecília Sales M. Prates, Médica Nefrologista. Todos os direitos reservados.</div>
                 </div>
                 <div class="container" style="text-align: center;">
                     <a href="https://www.agenciayuppy.com" target="_blank" rel="noopener"><img src="images/logos/logo yuppy.png" alt="logotipo Yuppy" style="padding: 5px; width: 150px;"></img></a>
@@ -286,13 +286,12 @@ Se você quiser exercer qualquer um deste direitos por favor contacte-nos. Por f
         <!-- end: Footer -->
 
     </div>
-
     <!-- end: Body Inner -->
 
     <!-- Scroll top -->
     <a id="scrollTop"><i class="icon-chevron-up"></i><i class="icon-chevron-up"></i></a>
         <!-- Whatsapp button -->
-        <a href="https://api.whatsapp.com/send?phone=553830148664" class="floating" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5538999731321" class="floating" target="_blank">
             <i class="fab fa-whatsapp float-button"></i>
     </a>
     <!--Plugins-->
