--- a/index.html
+++ b/index.html
@@ -449,31 +449,27 @@
             <div class="row">
                 <div class="col-lg-4">
                     <ul class="list-icon list-icon-arrow list-icon-colored">
-                        <li>Enxaqueca</li>
-                        <li>Insônia</li>
-                        <li>Esquecimento e perda de memória</li>
-                        <li>Neuropatia periférica</li>
-                        <li>Esclerose lateral amiotrófica</li>
-                        <li>Tremores</li>
+                        <li>Infecção urinária</li>
+                        <li>Cistos nos rins</li>
+                        <li>Cálculo renal ("pedra nos rins")</li>
+                        <li>Insuficiência renal crônica</li>
+                        <li>Insuficiência renal aguda</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
                     <ul class="list-icon list-icon-arrow list-icon-colored">
-                        <li>Miastenia Gravis</li>
-                        <li>Convulsões</li>
-                        <li>TDAH (Déficit de atenção e hiperatividade)</li>
-                        <li>Autismo</li>
-                        <li>Tontura</li>
-                        <li>Parkinson</li>
+                        <li>Nefrite</li>
+                        <li>Proteinúria</li>
+                        <li>Diminuição da urina</li>
+                        <li>Glomerulonefrite</li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
                     <ul class="list-icon list-icon-arrow list-icon-colored">
-                        <li>Alzheimer</li>
-                        <li>Meningites</li>
-                        <li>Trombose cerebral</li>
-                        <li>Derrame ou AVC</li>
-                        <li>Dor crônica</li>
+                        <li>Pressão alta</li>
+                        <li>Diabetes</li>
+                        <li>Edema</li>
+                        <li>Hematúria</li>
                     </ul>
                 </div>
                 <hr class="space">
