alterações notebook moc

--- a/index.html
+++ b/index.html
@@ -164,41 +164,64 @@
                     </div>
                     <div class="col-lg-6 offset-1 m-t-50" id="sobre-mim">
                         <h4 style="color: #825252;" class="m-b-10">SOBRE MIM</h4>
-                        <h2 class="m-b-10" style="font-weight: 700;">Dra. Érica Guimarães Castro</h2>
-                        <span> Neurologista e Neurofisiologista CRM MG 71590 - RQE 47504 | RQE 55971</span>
+                        <h2 class="m-b-10" style="font-weight: 700;">Dra. Maria Cecília Sales Mendes Prates </h2>
+                        <span"> Nefrologista e Clínica Médica CRM MG 55227 - RQE 38501 | RQE 38500</span>
+                        <span>Cuidando da sua saúde de forma integral. <br>
+                            Um atendimento humanizado, acolhedor e ético é a minha prioridade.
+                            </span>
                         <br>
                         <br>
-                        <h5 style="color: #825252;"><strong>FORMAÇÃO</strong></h5>
-                        <p> •	Graduada em Medicina pela Universidade Estadual de Montes Claros (UNIMONTES);<br>
-                            •	Graduação no exterior em Paramedic Science pela University of the West of England- Bristol, Reino Unido;<br>
-                            •	Residência Médica em Neurologia pelo Hospital Governador Israel Pinheiro/ IPSEMG – Belo Horizonte/MG;<br>
-                            •	Especialização em Neurofisiologia com ênfase em Eletroneuromiografia – Centro de Neurofisiologia Roldão Coelho – Belo Horizonte/MG;<br>
-                            •	Membro Titular da Sociedade Brasileira de Neurofisiologia Clínica- SBNC;<br>
-                            •	Membro efetivo da Academia Brasileira de Neurologia- ABN.                            
-                        </p>
-                        <h5 style="color: #825252;"><strong>ATUAÇÃO PROFISSIONAL</strong></h5>
-                        <p> •	Médica assistente do Hospital Santa Casa de Montes Claros;;<br>
-                            •   Precetora da residência de Neurocirurgia do Hospital Santa Casa de Montes Claros;<br> 
-                            •	Realiza exames de <strong>ELETRONEUROMIOGRAFIA</strong> dos membros superiores e inferiores, face, estimulação repetitiva, estudo do tremor.<br>                            
-                        </p>                        
-                        <div>
+                        <div class="tabs">
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">SOBRE MIM</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">O QUE ESPERAR DO MEU ACOMPANHAMENTO MÉDICO?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">QUANDO PROCURAR MEU ATENDIMENTO?</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content" id="myTabContent">
+                                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                    <p>Sou formada em Medicina pelo Instituto de Ciências da Saúde – FUNORTE em Montes Claros, especialista em Clínica Médica pela Universidade Federal do Vales do Jequitinhonha e Mucuri, na Santa Casa de Diamantina e em Nefrologia pela Santa Casa de Misericórdia de Montes Claros. </p>
+                                    <p>A escolha da Medicina se deu por vocação e a Nefrologia por paixão! Como médica, atuei na Saúde da Família e Comunidade em cidades do interior do Norte de Minas, como plantonista do CTI da Santa Casa de Caridade de Diamantina por 10 anos e atuo como nefrologista e professora na cidade de Diamantina.</p>
+                                    <p>Faço parte da equipe de Nefrologia da Hemodiálise da Santa Casa de Caridade de Diamantina, sou Nefrologista plantonista do CTI da Santa Casa de Diamantina e do Hospital Nossa Senhora da Saúde, atendo em consultório e sou professora assistente da Faculdade de Medicina da Universidade Federal dos Vales do Jequitinhonha e Mucuri.</p>
+                                    <p>A experiência integrada como nefrologista, na medicina intensiva de CTI e como professora, me trouxe um olhar amplo sobre a saúde, com atenção nos aspectos tanto da prevenção quanto do tratamento clínico, baseada em uma medicina de evidencias cientificas e praticada de forma individualizada. </p>
+                                    <p>Como nefrologista atuo na prevenção e tratamento de doenças relacionadas aos rins e trato urinário, que acometem muitas pessoas, como a infecção urinária, nefrolitíase, nefrites, glomerulonefrites e insuficiência renal.                                    </p>
+                                </div>
+                                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                    <p>Um atendimento humano, acolhedor e atento! A minha missão é fazer com que a sua saúde seja cuidada de forma individualizada e segura. Assim, durante a consulta e acompanhamento, todas as suas expectativas e anseios quanto ao diagnóstico e tratamento serão atentamente ouvidos e considerados para que, em conjunto e com total alinhamento, seja sugerido o melhor tratamento a ser seguido. </p>
+                                </div>
+                                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                                    <p>Os rins recebem cerca de 1,2L de sangue por minuto, podemos dizer que eles filtram todo o sangue de uma pessoa 12 vezes por hora, removendo resíduos tóxicos do organismo. Eles também regulam a pressão arterial, estimulam a produção de glóbulos vermelhos, atuam na formação e manutenção dos ossos.</p>
+                                    <p>Desta forma, o correto é procurar o especialista em rins mesmo sem apresentar problemas, com o objetivo de prevenir qualquer tipo de alteração que possa afetá-los.</p>
+                                    <p>Recomenda-se que todos os homens e mulheres acima de 40 anos realizem, anualmente, um check up com nefrologista.</p>
+                                    <p>Especialmente para as pessoas com histórico pessoal ou familiar de câncer, diabetes, hipertensão, doenças renais ou que apresentem sintomas aparentes como sangue na urina, dor ao urinar, urina espumosa, mudança na cor, odor e volume da urina, alteração nos hábitos urinários (como acordar mais de uma vez a noite para ir ao banheiro), dor nas costas, inchaços frequentes nos pés e tornozelos, o médico nefrologista dever ser procurado o mais breve para o devido acompanhamento, preventivo ou para tratamento.</p>
+                                </div>
+                            </div>
+                        </div>
                             <div class="row">
                                 <div class="col-lg-6">
                                 <h5 style="color: #825252;"><strong>ÁREAS DE ATUAÇÃO</strong></h5>
-                                <p class="retirar-espaco"> •	Doenças Neuromusculares;<br>
-                                    •	Doenças Neurogenéticas;<br>
-                                    •	Doenças Neurovasculares (AVC);<br>
-                                    •	Cefaléia;<br>
-                                    •	Neuropediatria;<br>                                                                                          
+                                <p class="retirar-espaco"> • Infecção Urinária;<br>
+                                    •	Hematúria;<br>
+                                    •	Proteinúria;<br>
+                                    •	Nefrolitíase (Cálculo Renal);<br>
+                                    •	Cistos Renais;<br> 
+                                    •   Nefrites.<br/>                                                                                
                                 </p>
                             </div>
                             <div class="col-lg-6">
                                 <h5 class="none" style="visibility: hidden;">ÁREAS DE ATUAÇÃO</h5>
-                                <p> •	Neurocognição e Demências;<br>
-                                    •	Distúrbios do Sono;<br>
-                                    •	Distúrbios do Movimento;<br> 
-                                    •	Convulsões e Epilepsia;<br>
-                                    •	Dor Neuropática e Dor Crônica.<br>                                                        
+                                <p> •	Glomerulonefrites;<br>
+                                    •	Pielonefrites;<br>
+                                    •	Insuficiência Renal Aguda;<br> 
+                                    •	Insuficiência Renal Crônica<br>
+                                    •	Edemas/retenção de líquidos.<br>
+                                    •   Hipertensão Arterial;<br>
+                                    •   Diabetes.<br/>                                                           
                                 </p>
                             </div>
                             </div>
@@ -224,8 +247,8 @@
                             <div class="icon">
                                 <a href="#"><i style="color: #825252;" class="fa fa-brain"></i></a>
                             </div>
-                            <h3>Doenças Neuromusculares</h3>
-                            <p>As doenças neuromusculares são doenças que afetam a função muscular ou dos nervos, causando fraqueza, atrofia, dormência, desequilíbrio. Doenças do neurônio motor, como a Esclerose Lateral Amiotrófica, Radiculopatias, Plexopatias, Ganglionopatias, Neuropatias periféricas, Miastenia gravis e Miopatias são algumas dessas doenças.</p>
+                            <h3>Infecção Urinária</h3>
+                            <p>A infecção urinária é qualquer infecção por micro-organismos que acometa o trato urinário: rins, ureteres, bexiga e uretra.</p>
                         </div>
                     </div>
                     <div class="col-lg-4" data-animate="fadeInUp" data-animate-delay="200">
