--- a/shortcode-according.html
+++ b/shortcode-according.html
@@ -694,7 +694,7 @@
                                         my talents. I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now. </p>
                                 </div>
                             </div>
-                            <div class="ac-item" aria-selected="true">
+                            <div class="ac-item">
                                 <h5 class="ac-title">Layout and design options</h5>
                                 <div class="ac-content">
                                     <p>When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary.</p>
@@ -774,7 +774,7 @@
                         <!-- Accordion -->
                         <h4>Simple</h4>
                         <div class="accordion accordion-simple">
-                            <div class="ac-item">
+                            <div class="ac-item ac-active">
                                 <h5 class="ac-title">Before you get started</h5>
                                 <div class="ac-content">
                                     <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
