--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="Dra. Maria Cecília Sales M. Prates" />
-    <meta name="description" content="nefrologia, nefrologista, maria cecilia prates, dra maria cecilia prates, Montes Claros, Diamantina, nefrologista em Montes Claros, nefrologista em Diamantina, tratamento de rins, tratamento de rins em montes claros,
-    pedra nos rins, hipertensao arterial, infecção urinária, nefrites, litíase renal, doenças raras císticas, transplante renal, hemodiálise, hemodiálise em Diamantina, doença renal cronica.">
+    <meta name="description" content="Nefrologista em Diamantina, especialista em Nefrologia e Clínica Médica, trata de doenças renais com atendimento humanizado, acolhedor e ético. Cuide da sua saúde renal com a Dra. Maria Cecília Prates.">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
