--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                     <div class="col-lg-6 offset-1 m-t-50" >
                         <h5 style="color: #825252;" class="m-b-10">NEFROLOGISTA EM DIAMANTINA</h5>
                         <h2 class="m-b-10" style="font-weight: 700;">Dra. Maria Cecília Sales Mendes Prates </h2>
-                        <span"> Nefrologista e Clínica Médica CRM MG 55227 - RQE 38501 | RQE 38500</span>
+                        <span"> Nefrologista e Clínica Médica CRM MG 55227 - RQE 38501 | RQE 38500.</span>
+                        <br/>
                         <span>Cuidando da sua saúde de forma integral. <br>
                             Um atendimento humanizado, acolhedor e ético é a minha prioridade.
                             </span>
@@ -323,8 +324,8 @@
                             <div class="icon">
                                 <a href="#"><img src="images/rins.png" style="width: 30px; margin: auto; position: relative; top: 5px;" alt=""></a>
                             </div>
-                            <h3>Edemas</h3>
-                            <p>Também conhecido como retenção de líquidos, é o inchaço causado pelo excesso de líquidos nos tecidos do corpo. Pode ser um sinal de doença nos rins.</p>
+                            <h3>Insuficiência Renal Crônica</h3>
+                            <p>É a condição na qual os rins perdem a capacidade de efetuar suas funções de forma lenta, progressiva e irreversível.</p>
                         </div>
                     </div>
                     <div class="col-lg-4" data-animate="fadeInUp" data-animate-delay="1600">
@@ -332,8 +333,8 @@
                             <div class="icon">
                                 <a href="#"><img src="images/rins.png" style="width: 30px; margin: auto; position: relative; top: 5px;" alt=""></a>
                             </div>
-                            <h3>Insuficiência Renal Aguda</h3>
-                            <p>é a condição na qual os rins perdem a capacidade de efetuar suas funções básicas de forma rápida, em horas ou dias e tende a ser reversível.</p>
+                            <h3>Edemas</h3>
+                            <p>Também conhecido como retenção de líquidos, é o inchaço causado pelo excesso de líquidos nos tecidos do corpo. Pode ser um sinal de doença nos rins.</p>
                         </div>
                     </div>
                     <a href="https://api.whatsapp.com/send?phone=5538999731321"><button type="button" class="btn btn-dark btn-shadow btn-light-hover" style="background-color:#825252; border: none; width: 100%;">Agende sua Consulta <i class="fab fa-whatsapp"></i></button></a>
