--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
                             <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Especialista em Nefrologia e Clínica médica</h1></div>
                             <br />
                             <br>
+                            <div class="text-center">
                             <a class="btn btn-primary btn-top" style="background-color: #825252 !important; border-color: #825252;" href="#sobre-mim">CONHEÇA A DRA. MARIA CECILIA PRATES</a>
                         <a class="btn btn-dark btn-top" href="https://api.whatsapp.com/send?phone=5538999731321">AGENDE SUA CONSULTA <i class="fab fa-whatsapp"></i></a>
+                        </div>
                         <!-- end: Captions -->
                     </div>
                 </div>
@@ -105,8 +107,10 @@
                             <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Receba todo o cuidado que você merece</h1></div>
                             <br />
                             <br>
-                            <a class="btn btn-primary btn-top" style="background-color: #825252 !important; border-color: #825252;" href="#sobre-mim">CONHEÇA A DRA. MARIA CECILIA PRATES</a>
-                        <a class="btn btn-dark btn-top" href="https://api.whatsapp.com/send?phone=5538999731321">AGENDE SUA CONSULTA <i class="fab fa-whatsapp"></i></a>
+                            <div class="text-center">
+                                <a class="btn btn-primary btn-top" style="background-color: #825252 !important; border-color: #825252;" href="#sobre-mim">CONHEÇA A DRA. MARIA CECILIA PRATES</a>
+                            <a class="btn btn-dark btn-top" href="https://api.whatsapp.com/send?phone=5538999731321">AGENDE SUA CONSULTA <i class="fab fa-whatsapp"></i></a>
+                            </div>
                         <!-- end: Captions -->
                     </div>
                 </div>
@@ -117,7 +121,7 @@
                 <div class="container">
                     <div class="slide-captions">
                         <!-- Captions -->
-                        <div>
+                        <div class="text-center">
                             <h4 class="text-uppercase m-b-0 texto-banner-margem">PREVENÇÃO</h4>
                             <h1 style="font-size: 4.5em;" class="text-uppercase text-lg diminuir-tamanho">Não espere o problema chegar para se cuidar </h1></div>
                             <br />
@@ -139,7 +143,7 @@
                     <div class="col-lg-5">
                         <div class="margem-top">
                             <div style="display: flex; flex-direction: column; justify-content: center;">
-                            <p style="text-align: center;">Clique aqui para conhecer sua Nefrologista</p>
+                            <p style="text-align: center !important;">Clique aqui para conhecer sua Nefrologista</p>
                             <img src="images/arrow-pijl.gif" style="width: 10%; margin: auto;" alt="">
                             </div>
                             <div id="sobre-mim" class="video-margin">
@@ -153,11 +157,9 @@
                     <div class="col-lg-6 offset-1 m-t-50" >
                         <h5 style="color: #825252;" class="m-b-10">NEFROLOGISTA EM DIAMANTINA</h5>
                         <h2 class="m-b-10" style="font-weight: 700;">Dra. Maria Cecília Sales Mendes Prates </h2>
-                        <span"> Nefrologista e Clínica Médica CRM MG 55227 - RQE 38501 | RQE 38500.</span>
-                        <br/>
-                        <span>Cuidando da sua saúde de forma integral. <br>
-                            Um atendimento humanizado, acolhedor e ético é a minha prioridade.
-                            </span>
+                        <span"> Nefrologista e Clínica Médica CRM MG 55227 - RQE 38501 | RQE 38500.</span> 
+                        <span>Cuidando da sua saúde de forma integral.</span><br>
+                           <span> Um atendimento humanizado, acolhedor e ético é a minha prioridade.</span>                            
                         <br>
                         <br>
                              <!-- Accordion -->
@@ -350,8 +352,8 @@
             <div class="container">
                 <div class="row" style="align-items: center;">                    
                     <div class="col-lg-5 m-t-50 padding-top">
-                        <h5 style="color: #825252;" class="m-b-10">CUIDE DA SUA SAÚDE RENAL</h5>
-                        <h2 class="m-b-10" style="font-weight: 700;">
+                        <h5 style="color: #825252;" class="m-b-10 centro">CUIDE DA SUA SAÚDE RENAL</h5>
+                        <h2 class="m-b-10 centro" style="font-weight: 700;">
                             Quando devo procurar um Nefrologista?</h2>
                         <p> O Nefrologista deve ser procurado quando o problema é especifico do rim – insuficiência renal, cistos, infecção de urina constante. Além disso, fique atento a edemas, inchaços, urina com sangue, mais de um calculo renal ou infecção de urina.                           
                         </p>                      
@@ -378,8 +380,8 @@
                 <div class="row">
                     
                     <div class="col-lg-5 m-t-50 padding-top">
-                        <h5 style="color: #825252;" class="m-b-10">ATENDIMENTO HUMANIZADO</h5>
-                        <h2 class="m-b-10" style="font-weight: 700;">
+                        <h5 style="color: #825252;" class="m-b-10 centro">ATENDIMENTO HUMANIZADO</h5>
+                        <h2 class="m-b-10 centro" style="font-weight: 700;">
                             Como a Dra. Maria Cecília pode te ajudar?</h2>
                         <p> Um atendimento humano, acolhedor e atento! A minha missão é fazer com que a sua saúde seja cuidada de forma individualizada e segura. Assim, durante a consulta e acompanhamento, todas as suas expectativas e anseios quanto ao diagnóstico e tratamento serão atentamente ouvidos e considerados para que, em conjunto e com total alinhamento, seja sugerido o melhor tratamento a ser seguido.                           
                         </p>                      
@@ -444,14 +446,6 @@
                     <!-- end: Testimonials item-->
                     <!-- Testimonials item -->
                     <div class="testimonial-item">
-                        <p>"Uma simpatia em pessoa, diagnostico rápido e fácil de entender."</p>
-                        <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
-                        <span>REVITALIZA - CENTRO DE ESTÉTICA</span>
-                        <span>Google</span>
-                    </div>
-                    <!-- end: Testimonials item-->
-                    <!-- Testimonials item -->
-                    <div class="testimonial-item">
                         <p>"Profissional excepcional, acessível, metódica, e muito atenciosa!"</p>
                         <img src="./images/estrelas.png" alt="" style="width: 100px; height: 30px;">
                         <span>NATALHA NEVES</span>
@@ -508,6 +502,7 @@
                 </div>
                 <hr class="space">
                 <a href="https://api.whatsapp.com/send?phone=5538999731321"><button type="button" class="btn btn-dark btn-shadow btn-light-hover" style="background-color:#825252; border: none; width: 100%;">Agende sua Consulta <i class="fab fa-whatsapp"></i></button></a>
+                <hr class="space">
             </div>
         </section>
         <!-- end: BLOG -->
@@ -525,17 +520,45 @@
                                 <p class="lead">Será um prazer atendê-lo(a).</p>
                             </div>
                             <div class="col-lg-12">
-                                <h2 class="m-b-10">Agende sua Consulta</h2>
+                                <h2 class="m-b-10">Contato Via Whatsapp</h2>
                                 <h4><i class="fab fa-whatsapp"></i> 38 9 9973-1321 </h4>
-                                <a href="https://api.whatsapp.com/send?phone=5538999731321"><button type="button" class="btn btn-dark btn-icon-holder btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Agendar no Whatsapp<i class="fab fa-whatsapp"></i></button></a>
+                                <a href="https://api.whatsapp.com/send?phone=5538999731321"><button type="button" class="btn btn-dark btn-icon-holder btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Tirar dúvidas<i class="fab fa-whatsapp"></i></button></a>
                                 <br/>
                                 <br>
                                 <h2 class="m-b-10">Onde Atendo</h2>
+                                <div class="carousel client-logos" data-items="1" data-autoplay="true" style="left: -25px !important;">
+                                    <div style="border: 2px solid white; padding: 20px; border-radius: 5px;">
+                                        <h3>CLÍNICA CENTERMED (DIAMANTINA)</h3>
+                                        <p><svg style="width: 1.2rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" fill="rgb(176, 115, 105)"/></svg> Rua do Fogo, 400, Centro - Diamantina-MG <span>(ao lado da Igreja da Luz)</span></p>
+                                        <a target="_blank" href="https://goo.gl/maps/4NbYfTis7RDawftJA"><button type="button" class="btn btn-dark btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Como Chegar<i class="fa-solid fa-location-dot"></i></button></a>
+                                        <h4><i class="fab fa-whatsapp"></i> 38 9 9973-1321 </h4>
+                                <a href="https://api.whatsapp.com/send?phone=5538999731321"><button type="button" class="btn btn-dark btn-icon-holder btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Agendar no Whatsapp<i class="fab fa-whatsapp"></i></button></a>
+                                    </div>
+                                    <div style="border: 2px solid white; padding: 20px; border-radius: 5px;">
+                                        <h3>CLÍNICA UNILAB (CAPELINHA)</h3>
+                                        <p><svg style="width: 1.2rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" fill="rgb(176, 115, 105)"/></svg> Avenida JK, 73, Centro - Capelinha-MG</p>
+                                        <a target="_blank" href="https://goo.gl/maps/itQcGsx86RSRF8tEA"><button type="button" class="btn btn-dark btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Como Chegar<i class="fa-solid fa-location-dot"></i></button></a>
+                                        <h4><i class="fa fa-phone"></i> 33 3516-2245</h4>
+                                        <h4><i class="fab fa-whatsapp"></i> 33 9 9139-1010 </h4>                                        
+                                <a href="https://wa.link/gwg2jr"><button type="button" class="btn btn-dark btn-icon-holder btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Agendar no Whatsapp<i class="fab fa-whatsapp"></i></button></a>
+                                       
+                                    </div>
+                                    <div style="border: 2px solid white; padding: 20px; border-radius: 5px;">
+                                        <h3>UNILAB LABORATÓRIO (ITAMARANDIBA)</h3>
+                                        <p><svg style="width: 1.2rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" fill="rgb(176, 115, 105)"/></svg> Rua Santa Luzia, 85, Centro - Itamarandiba-MG <span>(em frente ao Hospital Itamarandiba)</span></p>
+                                        <a target="_blank" href="https://goo.gl/maps/CvP6nTSbBishgBoo7"><button type="button" class="btn btn-dark btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Como Chegar<i class="fa-solid fa-location-dot"></i></button></a>
+                                        <h4><i class="fa fa-phone"></i> 38 3521-1869</h4>
+                                        <h4><i class="fab fa-whatsapp"></i> 38 9 9199-5758 </h4>
+                                <a href="https://wa.link/oti8fl"><button type="button" class="btn btn-dark btn-icon-holder btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Agendar no Whatsapp<i class="fab fa-whatsapp"></i></button></a>
+                                    </div>
+                                </div>
+                                <!--
                                 <h4>
-                                    <i class="fa-solid fa-location-dot"></i> Rua do Fogo, 400, Centro - Diamantina-MG <span style="font-weight: 500; font-size: 14px;">(ao lado da igreja Santa Luz)</span></h4>
+                                    <i class="fa-solid fa-location-dot"></i> Rua do Fogo, 400, Centro - Diamantina-MG <span style="font-weight: 500; font-size: 14px;">(ao lado da Igreja da Luz)</span></h4>
                                     <a target="_blank" href="https://goo.gl/maps/4NbYfTis7RDawftJA"><button type="button" class="btn btn-dark btn-shadow btn-light-hover" style="background-color:#825252; border: none;">Como Chegar<i class="fa-solid fa-location-dot"></i></button></a>
                                     <br>
                                     <br>
+                                    -->
                             </div>
                             <div class="col-lg-12 m-b-30">
                                 <h4>Minhas Redes Sociais</h4>
@@ -593,7 +616,7 @@
                                     <div class="widget">
                                         <div class="widget-title">Contato</div>
                                         <a href="tel:38999731321"><p>(38) 9 9973-1321</p></a>
-                                        <p>Rua do Fogo, 400, Centro - Diamantina-MG <span style=" font-size: 12px;">(ao lado da igreja Santa Luz)</span></p>
+                                        <p>Rua do Fogo, 400, Centro - Diamantina-MG <span style=" font-size: 12px;">(ao lado da Igreja da Luz)</span></p>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
@@ -624,7 +647,7 @@
                 <div class="container">
                     <div class="copyright-text text-center">&copy; 2023 Dra. Maria Cecília Sales M. Prates, Médica Nefrologista. Todos os direitos reservados.</div>
                 </div>
-                <div class="container" style="text-align: center;">
+                <div class="container" style="text-align: center !important;">
                     <a href="https://www.agenciayuppy.com" target="_blank" rel="noopener"><img src="images/logos/logo yuppy.png" alt="logotipo Yuppy" style="padding: 5px; width: 150px;"></img></a>
                 </div>
             </div>
